# atmacup10

./: README.md  pyproject.toml
01_nb/: 056_Model_nb053ベースでハイパラチューニング.ipynb  067_056のハイパラで再学習（057修正_再現性確保）.ipynb
03_feature/feat_select/nb056/: cols_perfcorr.pkl  cols_std0.pkl
03_feature/tuned_models/nb056/: params_tuned.pkl
03_feature/tuned_models/nb067/: params_tuned.pkl
03_feature/w2v/nb056/: w2v_cols.pkl  w2v_cols_text.pkl
