[tool.poetry]
name = "poet_ml"
version = "0.1.0"
description = ""
authors = ["calpis10000 <calpis10000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
numpy = "^1.18.1"
scikit-learn = "^0.22.2"
seaborn = "^0.11.1"
tqdm = "^4.43.0"
xgboost = "^1.3.3"
shap = "^0.39.0"
wheel = "^0.34.2"
lightgbm = "^3.1.1"
jupyterlab = "^2.0.1"
kaggle = "^1.5.8"
plotly = "^4.9.0"
matplotlib-venn = "^0.11.6"
jpholiday = "^0.1.4"
pandas-profiling = "^2.9.0"
ipywidgets = "^7.5.1"
texthero = "^1.0.9"
python-Levenshtein = "^0.12.0"
japanize_matplotlib = "^1.1.3"
MulticoreTSNE = "^0.1"
optuna = "^2.6.0"
opencv-contrib-python = "^4.5.1"
geopy = "^2.1.0"
catboost = "^0.24.4"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"





